syntax = "proto3";

package proto;

option go_package = "./proto;taskpb";

service TaskService {
    rpc CreateTask (CreateRequest) returns (CreateResponse);
    rpc GetTask (GetRequest) returns (GetResponse);
    rpc UpdateTask (UpdateRequest) returns (Empty);
    rpc DeleteTask (DeleteRequest) returns (Empty);
}

message CreateRequest {
    string message = 1;
}

message CreateResponse {
    int32 res = 1;
}

message GetRequest {
    int32 req = 1;
}

message GetResponse {
    string message = 1;
}

message UpdateRequest {
    int32 id = 1;
    string message = 2;
}

message Empty {}

message DeleteRequest {
    int32 id = 1;
    string message = 2;
}